--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -95,6 +95,7 @@ psutil
 sentencepiece
 soundfile==0.13.1
 azure-ai-documentintelligence==1.0.2
+azure-cognitiveservices-speech==1.41.1
 
 pillow==11.3.0
 opencv-python-headless==4.11.0.86
